Bug 534492 - Dynamic arg line for tycho-surefire-plugin
- automatic adding of '-XstartOnFirstThread' on macOS
- automatic adding of '--add-modules=ALL-SYSTEM' on Java 9+
- placeholder properties for additional arguments

Change-Id: I38015fd29acc9193f47427d95c65c65c9a661339
Signed-off-by: Karsten Thoms <karsten.thoms@itemis.de>